Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/_sq/Stories/Templates/StoryTogglePageControl</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal</li>
@@ -252,6 +254,10 @@ Error message and password prompt
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/showeditpreview</li>
+
+<li>$:/state/strollhometabs-338615865</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -784,6 +790,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <pre>YYYY / 0MM / 0DD / 0hh:0mm:0ss /</pre>
 </div>
 <div bag="default" created="20200416201744386" modified="20200521145816127" revision="0" tags="$:/giffmex/stroll" title="$:/config/PageControlButtons/Visibility/$:/_sq/Stories/Templates/StoryTogglePageControl" type="text/vnd.tiddlywiki">
+<pre>show</pre>
+</div>
+<div created="20200806224814639" modified="20200806224814639" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
 <pre>show</pre>
 </div>
 <div created="20200502172232641" modified="20200521145819082" tags="$:/giffmex/stroll" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
@@ -11979,19 +11988,25 @@ exports.context = contextWidget;
 <div created="20200806224240409" modified="20200806224241729" title="$:/SiteTitle">
 <pre>MyNotes</pre>
 </div>
-<div created="20200806224404807" modified="20200806224456110" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200806225026421" modified="20200806225026421" title="$:/state/showeditpreview">
+<pre>yes</pre>
+</div>
+<div created="20200806224820923" modified="20200806224820923" title="$:/state/strollhometabs-338615865">
+<pre>Stroll vs Roam</pre>
+</div>
+<div created="20200806224404807" modified="20200806224628474" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200806224458507" modified="20200806224458507" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200806224410802" modified="20200806224410802" title="$:/state/tab/sidebar--595412856">
+<div created="20200806224410802" modified="20200806224746625" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200806224353994" list="$:/ControlPanel [[Welcome to Stroll]]" modified="20200806224353994" title="$:/StoryList">
+<div created="20200806224742150" list="[[Welcome to Stroll]]" modified="20200806224742150" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
