--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@ Error message and password prompt
 
 <li>$:/state/tab/sidebar--595412856</li>
 
+<li>$:/state/toc/Contents-Book list-1843068618</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
@@ -316,6 +318,8 @@ Error message and password prompt
 <li>Dave Gifford</li>
 
 <li>Download Stroll</li>
+
+<li>Draft of 'The Lord of the Rings'</li>
 
 <li>Finance</li>
 
@@ -12000,13 +12004,16 @@ exports.context = contextWidget;
 <div created="20200806224458507" modified="20200806224458507" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200806224410802" modified="20200806224746625" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200806224410802" modified="20200806225706402" title="$:/state/tab/sidebar--595412856">
+<pre>Contents</pre>
+</div>
+<div created="20200806225518544" modified="20200806225518544" title="$:/state/toc/Contents-Book list-1843068618">
+<pre>open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200806224742150" list="[[Welcome to Stroll]]" modified="20200806224742150" title="$:/StoryList">
+<div created="20200806224742150" list="Reading [[Draft of 'The Lord of the Rings']] Completed [[Book list]] [[Welcome to Stroll]]" modified="20200806225621654" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -12466,6 +12473,9 @@ Now go back to [[Welcome to Stroll]] to continue the tutorial.</pre>
 !!Saving changes
 
 *There may be a few steps involved for you to get Stroll to save changes the way you want it to. And everything depends on which browser you use and whether you use Stroll as a single file wiki, hosted online, with the ~TiddlyDesktop, or with node.js. See ~TiddlyWiki's documentation [[here|https://tiddlywiki.com/#GettingStarted]].</pre>
+</div>
+<div created="20200804081510116" draft.of="The Lord of the Rings" draft.title="The Lord of the Rings" modified="20200806225526765" tags="task done" title="Draft of 'The Lord of the Rings'" tmap.id="42e7ab43-00ef-41ce-9ade-6bb2917614b5">
+<pre></pre>
 </div>
 <div created="20200804073952357" modified="20200804143757056" tags="Contents" title="Finance" tmap.id="0bfe0a82-f8d8-4a5c-b77b-1d1d41dc99b2">
 <pre></pre>
@@ -13013,7 +13023,7 @@ As I add ''them''
 
 </pre>
 </div>
-<div created="20200804081510116" modified="20200804083009282" tags="task done" title="The Lord of the Rings" tmap.id="42e7ab43-00ef-41ce-9ade-6bb2917614b5">
+<div created="20200804081510116" modified="20200806225627932" tags="task" title="The Lord of the Rings" tmap.id="42e7ab43-00ef-41ce-9ade-6bb2917614b5">
 <pre></pre>
 </div>
 <div created="20200423141216977" modified="20200521145918984" tags="$:/giffmex/tutorials" title="The TiddlyWiki layout">
