Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/folded/Welcome to Stroll</li>
+
 <li>$:/state/showeditpreview</li>
 
 <li>$:/state/strollhometabs-338615865</li>
@@ -1267,7 +1269,7 @@ Grab snippets: e.g., `tiddlywiki --rendertiddlers [!is[system]] $:/core/template
 &lt;/div&gt;
 </pre>
 </div>
-<div caption="Highlights in context" created="20200102141715979" modified="20200521151342756" tags="$:/giffmex/stroll $:/giffmex/blinks $:/giffmex/refs" title="$:/.giffmex/ViewTemplate/refscontext">
+<div caption="Highlights in context" created="20200102141715979" modified="20200807002352439" tags="$:/giffmex/blinks $:/giffmex/refs $:/giffmex/stroll" title="$:/.giffmex/ViewTemplate/refscontext">
 <pre>&lt;span class=&quot;viewtemplatebigtext&quot;&gt;
 
 &lt;$reveal type=&quot;nomatch&quot; stateTitle=&lt;&lt;folded-state&gt;&gt; text=&quot;hide&quot; tag=&quot;div&quot; retain=&quot;yes&quot; animate=&quot;yes&quot;&gt;
@@ -1283,10 +1285,10 @@ Grab snippets: e.g., `tiddlywiki --rendertiddlers [!is[system]] $:/core/template
 
 &lt;/span&gt;</pre>
 </div>
-<div caption="Hidden" created="20200502165303215" creator="Quick Config" modified="20200521151351420" modifier="Quick Config" tags="$:/giffmex/stroll $:/giffmex/blinks $:/giffmex/refs" title="$:/.giffmex/ViewTemplate/refshidden" type="application/x-tiddler">
+<div caption="Hidden" created="20200502165303215" creator="Quick Config" modified="20200807002346882" modifier="Quick Config" tags="$:/giffmex/blinks $:/giffmex/refs $:/giffmex/stroll" title="$:/.giffmex/ViewTemplate/refshidden" type="application/x-tiddler">
 <pre></pre>
 </div>
-<div bag="default" caption="Simple links" created="20200126143031898" modified="20200521174932446" revision="0" tags="$:/giffmex/stroll $:/giffmex/blinks $:/giffmex/refs $:/tags/ViewTemplate" title="$:/.giffmex/ViewTemplate/refslinks" type="text/vnd.tiddlywiki">
+<div bag="default" caption="Simple links" created="20200126143031898" modified="20200807002352442" revision="0" tags="$:/giffmex/blinks $:/giffmex/refs $:/giffmex/stroll $:/tags/ViewTemplate" title="$:/.giffmex/ViewTemplate/refslinks" type="text/vnd.tiddlywiki">
 <pre>&lt;span class=&quot;viewtemplatebigtext&quot;&gt;
 
 &lt;$reveal type=&quot;nomatch&quot; stateTitle=&lt;&lt;folded-state&gt;&gt; text=&quot;hide&quot; tag=&quot;div&quot; retain=&quot;yes&quot; animate=&quot;yes&quot;&gt;
@@ -1302,7 +1304,7 @@ Grab snippets: e.g., `tiddlywiki --rendertiddlers [!is[system]] $:/core/template
 
 &lt;/span&gt;</pre>
 </div>
-<div bag="default" caption="Full text" created="20200126142157739" modified="20200521151406793" revision="0" tags="$:/giffmex/stroll $:/giffmex/blinks $:/giffmex/refs" title="$:/.giffmex/ViewTemplate/refstranscludeclean" type="text/vnd.tiddlywiki">
+<div bag="default" caption="Full text" created="20200126142157739" modified="20200807002341015" revision="0" tags="$:/giffmex/blinks $:/giffmex/refs $:/giffmex/stroll" title="$:/.giffmex/ViewTemplate/refstranscludeclean" type="text/vnd.tiddlywiki">
 <pre>&lt;span class=&quot;viewtemplatebigtext&quot;&gt;
 
 &lt;$reveal type=&quot;nomatch&quot; stateTitle=&lt;&lt;folded-state&gt;&gt; text=&quot;hide&quot; tag=&quot;div&quot; retain=&quot;yes&quot; animate=&quot;yes&quot;&gt;
@@ -1315,7 +1317,7 @@ Grab snippets: e.g., `tiddlywiki --rendertiddlers [!is[system]] $:/core/template
 
 &lt;/span&gt;</pre>
 </div>
-<div caption="Full text under sliders" created="20200126142157739" modified="20200521151416013" tags="$:/giffmex/stroll $:/giffmex/blinks $:/giffmex/refs" title="$:/.giffmex/ViewTemplate/refstranscludecollapse">
+<div caption="Full text under sliders" created="20200126142157739" modified="20200807002345007" tags="$:/giffmex/blinks $:/giffmex/refs $:/giffmex/stroll" title="$:/.giffmex/ViewTemplate/refstranscludecollapse">
 <pre>&lt;span class=&quot;viewtemplatebigtext&quot;&gt;
 
 &lt;$reveal type=&quot;nomatch&quot; stateTitle=&lt;&lt;folded-state&gt;&gt; text=&quot;hide&quot; tag=&quot;div&quot; retain=&quot;yes&quot; animate=&quot;yes&quot;&gt;
@@ -12638,11 +12640,14 @@ exports.context = contextWidget;
 <div created="20200806224240409" modified="20200806224241729" title="$:/SiteTitle">
 <pre>MyNotes</pre>
 </div>
+<div created="20200807002521168" modified="20200807002522527" title="$:/state/folded/Welcome to Stroll">
+<pre>show</pre>
+</div>
 <div created="20200806225026421" modified="20200806225026421" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20200806224820923" modified="20200806225812977" title="$:/state/strollhometabs-338615865">
-<pre>Linking in Stroll, part 1</pre>
+<div created="20200806224820923" modified="20200807002421662" title="$:/state/strollhometabs-338615865">
+<pre>New tiddler linked here</pre>
 </div>
 <div created="20200806224404807" modified="20200806224628474" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
@@ -12659,7 +12664,7 @@ exports.context = contextWidget;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200806224742150" list="[[Linking in Stroll, part 1]] Autocompletion [[Muffin 2]] [[Muffin 1]] [[Hint for Muffin tutorial]] Muffin! [[Welcome to Stroll]]" modified="20200806230012863" title="$:/StoryList">
+<div created="20200807002324535" list="Muffin! [[Welcome to Stroll]]" modified="20200807002324535" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
