Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@ Error message and password prompt
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/moresidebar-1850697562</li>
+
 <li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/state/toc/Contents-Book list-1843068618</li>
@@ -393,8 +395,6 @@ Error message and password prompt
 
 <li>Valuation Ratios</li>
 
-<li>Welcome to Stroll</li>
-
 </ul>
 </p>
 
@@ -415,7 +415,7 @@ Error message and password prompt
 <div created="20200502183010768" modified="20200521145819496" tags="$:/giffmex/stroll" title="$:/_sq/Stories/config/Story2-storyview">
 <pre>classic</pre>
 </div>
-<div bag="default" created="20200425131030296" current-tiddler="Welcome to Stroll" modified="20200806225741522" revision="0" title="$:/_sq/Stories/Story2HistoryList" type="application/json">
+<div bag="default" created="20200425131030296" current-tiddler="Welcome to Stroll" modified="20200807002645624" revision="0" title="$:/_sq/Stories/Story2HistoryList" type="application/json">
 <pre>[
     {
         &quot;title&quot;: &quot;$:/config/Tiddlers/TitleLinks&quot;,
@@ -1058,10 +1058,32 @@ Error message and password prompt
             &quot;bottom&quot;: 315.13543701171875,
             &quot;height&quot;: 20
         }
+    },
+    {
+        &quot;title&quot;: &quot;Welcome to Stroll&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 145.59375,
+            &quot;left&quot;: 583,
+            &quot;width&quot;: 32.895835876464844,
+            &quot;right&quot;: 615.8958358764648,
+            &quot;bottom&quot;: 250.71875,
+            &quot;height&quot;: 105.125
+        }
+    },
+    {
+        &quot;title&quot;: &quot;Welcome to Stroll&quot;,
+        &quot;fromPageRect&quot;: {
+            &quot;top&quot;: 58,
+            &quot;left&quot;: 583,
+            &quot;width&quot;: 32.895835876464844,
+            &quot;right&quot;: 615.8958358764648,
+            &quot;bottom&quot;: 163.125,
+            &quot;height&quot;: 105.125
+        }
     }
 ]</pre>
 </div>
-<div bag="default" created="20170615140314952" list="" modified="20200521145810877" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
+<div bag="default" created="20170615140314952" list="" modified="20200807002645622" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
 <div created="20191010123116672" modified="20200714164402812" tags="$:/tags/Stylesheet $:/giffmex/stroll $:/giffmex/blinks" title="$:/.giffmex/.Stylesheet4Stroll" type="text/css">
@@ -1441,7 +1463,7 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div bag="default" created="20191225174624729" modified="20200521145811587" revision="0" tags="$:/giffmex/stroll" title="$:/config/NewJournal/Title" type="text/vnd.tiddlywiki">
 <pre>YYYY / 0MM / 0DD / 0hh:0mm:0ss /</pre>
 </div>
-<div bag="default" created="20200416201744386" modified="20200521145816127" revision="0" tags="$:/giffmex/stroll" title="$:/config/PageControlButtons/Visibility/$:/_sq/Stories/Templates/StoryTogglePageControl" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200416201744386" modified="20200807003316527" revision="0" tags="$:/giffmex/stroll" title="$:/config/PageControlButtons/Visibility/$:/_sq/Stories/Templates/StoryTogglePageControl" type="text/vnd.tiddlywiki">
 <pre>show</pre>
 </div>
 <div created="20200806224814639" modified="20200806224814639" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
@@ -12640,14 +12662,14 @@ exports.context = contextWidget;
 <div created="20200806224240409" modified="20200806224241729" title="$:/SiteTitle">
 <pre>MyNotes</pre>
 </div>
-<div created="20200807002521168" modified="20200807002522527" title="$:/state/folded/Welcome to Stroll">
+<div created="20200807002521168" modified="20200807002659550" title="$:/state/folded/Welcome to Stroll">
 <pre>show</pre>
 </div>
 <div created="20200806225026421" modified="20200806225026421" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20200806224820923" modified="20200807002421662" title="$:/state/strollhometabs-338615865">
-<pre>New tiddler linked here</pre>
+<div created="20200806224820923" modified="20200807002840489" title="$:/state/strollhometabs-338615865">
+<pre>Advanced stuff</pre>
 </div>
 <div created="20200806224404807" modified="20200806224628474" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
@@ -12655,8 +12677,11 @@ exports.context = contextWidget;
 <div created="20200806224458507" modified="20200806224458507" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200806224410802" modified="20200806225730098" title="$:/state/tab/sidebar--595412856">
-<pre>$:/.giffmex/sidebar/tabs/strollcontrols</pre>
+<div created="20200807003444196" modified="20200807003446112" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
+</div>
+<div created="20200806224410802" modified="20200807003442025" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20200806225518544" modified="20200806225518544" title="$:/state/toc/Contents-Book list-1843068618">
 <pre>open</pre>
@@ -12664,7 +12689,7 @@ exports.context = contextWidget;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200807002324535" list="Muffin! [[Welcome to Stroll]]" modified="20200807002324535" title="$:/StoryList">
+<div created="20200807002324535" list="" modified="20200807002930820" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13868,9 +13893,6 @@ Too large compared to other could mean that it is overpriced.
 As of December 31, 2015, Amazon’s stock price was $675.89. We can calculate the P/E ratio using both basic, as well as diluted EPS. For simplicity, we will use the basic EPS of $1.28. Dividing the share prices of $675.89 by the EPS of $1.28, gives an EPS of 528.04. For each $1 in profits earned, investors are willing to pay $528.04.
 
 This could mean that investors place a very high value on Amazon’s future growth potential. Alternatively, Amazon’s stock price is far higher than what its fundamentals justify, and should be sold. In the two of the past four years, Amazon has had negative P/E ratios. It is impossible to interpret a negative P/E ratio, as it does not make any sense as to why investors would be willing to pay anything for a company that is making losses.</pre>
-</div>
-<div bag="default" created="20200128030902225" list="$:/_sq/Stories-overview" modified="20200521174009380" revision="0" tags="$:/giffmex/tutorials" title="Welcome to Stroll" type="text/vnd.tiddlywiki">
-<pre>&lt;&lt;tabs &quot;[[A stroll through Stroll]] [[The TiddlyWiki layout]] [[Using tiddlers]] [[Linking in Stroll, part 1]] [[Linking in Stroll, part 2]] [[Linking in Stroll, part 3]] [[New tiddler linked here]] [[Two columns]] [[Advanced stuff]] [[Troubleshooting]] [[Stroll vs Roam]] [[Recent updates to Stroll]] [[Download Stroll]] [[Updating Stroll]] [[Add Stroll to your TW]] [[Get goodies]] [[Help / Acknowledgments]] [[Help us]]&quot; &quot;[[A stroll through Stroll]]&quot; &quot;$:/state/strollhometabs&quot; &quot;tc-vertical&quot;&gt;&gt;</pre>
 </div>
 
 
