--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@ Error message and password prompt
 
 <li>$:/config/RelinkOnRename</li>
 
+<li>$:/config/TextEditor/EnableToolbar</li>
+
 <li>$:/config/Tiddlers/TitleLinks</li>
 
 <li>$:/config/ui/EditTemplate</li>
@@ -206,6 +208,12 @@ Error message and password prompt
 <li>$:/core/ui/Buttons/fold</li>
 
 <li>$:/core/ui/ControlPanel/StoryView</li>
+
+<li>$:/core/ui/EditTemplate/fields</li>
+
+<li>$:/core/ui/EditTemplate/tags</li>
+
+<li>$:/core/ui/EditTemplate/type</li>
 
 <li>$:/core/ui/ViewTemplate/title</li>
 
@@ -796,6 +804,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 </div>
 <div bag="default" created="20200106214031452" modified="20200521150810088" revision="0" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
+</div>
+<div created="20200807040444373" modified="20200807040446552" title="$:/config/TextEditor/EnableToolbar">
+<pre>no</pre>
 </div>
 <div bag="default" created="20200414150157768" modified="20200521145815908" revision="0" tags="$:/giffmex/stroll" title="$:/config/Tiddlers/TitleLinks" type="text/vnd.tiddlywiki">
 <pre>no</pre>
@@ -10221,6 +10232,184 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <pre>{{$:/snippets/viewswitcher}}
 </pre>
 </div>
+<div created="20200807040445012" modified="20200807040445012" tags="" title="$:/core/ui/EditTemplate/fields">
+<pre>\define lingo-base() $:/language/EditTemplate/
+\define config-title()
+$:/config/EditTemplateFields/Visibility/$(currentField)$
+\end
+
+\define config-filter()
+[[hide]] -[title{$(config-title)$}]
+\end
+
+\define current-tiddler-new-field-selector()
+[data-tiddler-title=&quot;$(currentTiddlerCSSescaped)$&quot;] .tc-edit-field-add-name input
+\end
+
+\define new-field-actions()
+&lt;$action-sendmessage $message=&quot;tm-add-field&quot; $name={{{ [&lt;newFieldNameTiddler&gt;get[text]] }}} $value={{{ [&lt;newFieldValueTiddler&gt;get[text]] }}}/&gt;
+&lt;$action-deletetiddler $tiddler=&lt;&lt;newFieldNameTiddler&gt;&gt;/&gt;
+&lt;$action-deletetiddler $tiddler=&lt;&lt;newFieldValueTiddler&gt;&gt;/&gt;
+&lt;$action-sendmessage $message=&quot;tm-focus-selector&quot; $param=&lt;&lt;current-tiddler-new-field-selector&gt;&gt;/&gt;
+\end
+
+\define new-field()
+&lt;$vars name={{{ [&lt;newFieldNameTiddler&gt;get[text]] }}}&gt;
+&lt;$reveal type=&quot;nomatch&quot; text=&quot;&quot; default=&lt;&lt;name&gt;&gt;&gt;
+&lt;$button tooltip=&lt;&lt;lingo Fields/Add/Button/Hint&gt;&gt;&gt;
+&lt;$action-sendmessage $message=&quot;tm-add-field&quot;
+$name=&lt;&lt;name&gt;&gt;
+$value={{{ [&lt;newFieldValueTiddler&gt;get[text]] }}}/&gt;
+&lt;$action-deletetiddler $tiddler=&lt;&lt;newFieldNameTiddler&gt;&gt;/&gt;
+&lt;$action-deletetiddler $tiddler=&lt;&lt;newFieldValueTiddler&gt;&gt;/&gt;
+&lt;&lt;lingo Fields/Add/Button&gt;&gt;
+&lt;/$button&gt;
+&lt;/$reveal&gt;
+&lt;$reveal type=&quot;match&quot; text=&quot;&quot; default=&lt;&lt;name&gt;&gt;&gt;
+&lt;$button&gt;
+&lt;&lt;lingo Fields/Add/Button&gt;&gt;
+&lt;/$button&gt;
+&lt;/$reveal&gt;
+&lt;/$vars&gt;
+\end
+\whitespace trim
+
+&lt;div class=&quot;tc-edit-fields&quot;&gt;
+&lt;table class=&quot;tc-edit-fields&quot;&gt;
+&lt;tbody&gt;
+&lt;$list filter=&quot;[all[current]fields[]] +[sort[title]]&quot; variable=&quot;currentField&quot; storyview=&quot;pop&quot;&gt;
+&lt;$list filter=&lt;&lt;config-filter&gt;&gt; variable=&quot;temp&quot;&gt;
+&lt;tr class=&quot;tc-edit-field&quot;&gt;
+&lt;td class=&quot;tc-edit-field-name&quot;&gt;
+&lt;$text text=&lt;&lt;currentField&gt;&gt;/&gt;:&lt;/td&gt;
+&lt;td class=&quot;tc-edit-field-value&quot;&gt;
+&lt;$edit-text tiddler=&lt;&lt;currentTiddler&gt;&gt; field=&lt;&lt;currentField&gt;&gt; placeholder={{$:/language/EditTemplate/Fields/Add/Value/Placeholder}} tabindex={{$:/config/EditTabIndex}}/&gt;
+&lt;/td&gt;
+&lt;td class=&quot;tc-edit-field-remove&quot;&gt;
+&lt;$button class=&quot;tc-btn-invisible&quot; tooltip={{$:/language/EditTemplate/Field/Remove/Hint}} aria-label={{$:/language/EditTemplate/Field/Remove/Caption}}&gt;
+&lt;$action-deletefield $field=&lt;&lt;currentField&gt;&gt;/&gt;
+{{$:/core/images/delete-button}}
+&lt;/$button&gt;
+&lt;/td&gt;
+&lt;/tr&gt;
+&lt;/$list&gt;
+&lt;/$list&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+&lt;/div&gt;
+
+&lt;$fieldmangler&gt;
+&lt;div class=&quot;tc-edit-field-add&quot;&gt;
+&lt;em class=&quot;tc-edit&quot;&gt;
+&lt;&lt;lingo Fields/Add/Prompt&gt;&gt;&amp;nbsp;&amp;nbsp;
+&lt;/em&gt;
+&lt;span class=&quot;tc-edit-field-add-name&quot;&gt;
+&lt;$edit-text tiddler=&lt;&lt;newFieldNameTiddler&gt;&gt; tag=&quot;input&quot; default=&quot;&quot; placeholder={{$:/language/EditTemplate/Fields/Add/Name/Placeholder}} focusPopup=&lt;&lt;qualify &quot;$:/state/popup/field-dropdown&quot;&gt;&gt; class=&quot;tc-edit-texteditor tc-popup-handle&quot; tabindex={{$:/config/EditTabIndex}} focus={{{ [{$:/config/AutoFocus}match[fields]then[true]] ~[[false]] }}}/&gt;
+&lt;/span&gt;&amp;nbsp;
+&lt;$button popup=&lt;&lt;qualify &quot;$:/state/popup/field-dropdown&quot;&gt;&gt; class=&quot;tc-btn-invisible tc-btn-dropdown&quot; tooltip={{$:/language/EditTemplate/Field/Dropdown/Hint}} aria-label={{$:/language/EditTemplate/Field/Dropdown/Caption}}&gt;{{$:/core/images/down-arrow}}&lt;/$button&gt;&amp;nbsp;
+&lt;$reveal state=&lt;&lt;qualify &quot;$:/state/popup/field-dropdown&quot;&gt;&gt; type=&quot;nomatch&quot; text=&quot;&quot; default=&quot;&quot;&gt;
+&lt;div class=&quot;tc-block-dropdown tc-edit-type-dropdown&quot;&gt;
+&lt;$set name=&quot;tv-show-missing-links&quot; value=&quot;yes&quot;&gt;
+&lt;$linkcatcher to=&lt;&lt;newFieldNameTiddler&gt;&gt;&gt;
+&lt;div class=&quot;tc-dropdown-item&quot;&gt;
+&lt;&lt;lingo Fields/Add/Dropdown/User&gt;&gt;
+&lt;/div&gt;
+&lt;$set name=&quot;newFieldName&quot; value={{{ [&lt;newFieldNameTiddler&gt;get[text]] }}}&gt;
+&lt;$list filter=&quot;[!is[shadow]!is[system]fields[]search:title&lt;newFieldName&gt;sort[]] -created -creator -draft.of -draft.title -modified -modifier -tags -text -title -type&quot;  variable=&quot;currentField&quot;&gt;
+&lt;$link to=&lt;&lt;currentField&gt;&gt;&gt;
+&lt;$text text=&lt;&lt;currentField&gt;&gt;/&gt;
+&lt;/$link&gt;
+&lt;/$list&gt;
+&lt;div class=&quot;tc-dropdown-item&quot;&gt;
+&lt;&lt;lingo Fields/Add/Dropdown/System&gt;&gt;
+&lt;/div&gt;
+&lt;$list filter=&quot;[fields[]search:title&lt;newFieldName&gt;sort[]] -[!is[shadow]!is[system]fields[]]&quot; variable=&quot;currentField&quot;&gt;
+&lt;$link to=&lt;&lt;currentField&gt;&gt;&gt;
+&lt;$text text=&lt;&lt;currentField&gt;&gt;/&gt;
+&lt;/$link&gt;
+&lt;/$list&gt;
+&lt;/$set&gt;
+&lt;/$linkcatcher&gt;
+&lt;/$set&gt;
+&lt;/div&gt;
+&lt;/$reveal&gt;
+&lt;span class=&quot;tc-edit-field-add-value&quot;&gt;
+&lt;$set name=&quot;currentTiddlerCSSescaped&quot; value={{{ [&lt;currentTiddler&gt;escapecss[]] }}}&gt;
+&lt;$keyboard key=&quot;((add-field))&quot; actions=&lt;&lt;new-field-actions&gt;&gt;&gt;
+&lt;$edit-text tiddler=&lt;&lt;newFieldValueTiddler&gt;&gt; tag=&quot;input&quot; default=&quot;&quot; placeholder={{$:/language/EditTemplate/Fields/Add/Value/Placeholder}} class=&quot;tc-edit-texteditor&quot; tabindex={{$:/config/EditTabIndex}}/&gt;
+&lt;/$keyboard&gt;
+&lt;/$set&gt;
+&lt;/span&gt;&amp;nbsp;
+&lt;span class=&quot;tc-edit-field-add-button&quot;&gt;
+&lt;$macrocall $name=&quot;new-field&quot;/&gt;
+&lt;/span&gt;
+&lt;/div&gt;
+&lt;/$fieldmangler&gt;
+</pre>
+</div>
+<div created="20200807040443632" modified="20200807040443632" tags="" title="$:/core/ui/EditTemplate/tags">
+<pre>\whitespace trim
+
+\define lingo-base() $:/language/EditTemplate/
+
+\define tag-styles()
+background-color:$(backgroundColor)$;
+fill:$(foregroundColor)$;
+color:$(foregroundColor)$;
+\end
+
+\define tag-body-inner(colour,fallbackTarget,colourA,colourB,icon)
+\whitespace trim
+&lt;$vars foregroundColor=&lt;&lt;contrastcolour target:&quot;&quot;&quot;$colour$&quot;&quot;&quot; fallbackTarget:&quot;&quot;&quot;$fallbackTarget$&quot;&quot;&quot; colourA:&quot;&quot;&quot;$colourA$&quot;&quot;&quot; colourB:&quot;&quot;&quot;$colourB$&quot;&quot;&quot;&gt;&gt; backgroundColor=&quot;&quot;&quot;$colour$&quot;&quot;&quot;&gt;
+&lt;span style=&lt;&lt;tag-styles&gt;&gt; class=&quot;tc-tag-label tc-tag-list-item&quot;&gt;
+&lt;$transclude tiddler=&quot;&quot;&quot;$icon$&quot;&quot;&quot;/&gt;&lt;$view field=&quot;title&quot; format=&quot;text&quot; /&gt;
+&lt;$button message=&quot;tm-remove-tag&quot; param={{!!title}} class=&quot;tc-btn-invisible tc-remove-tag-button&quot;&gt;{{$:/core/images/close-button}}&lt;/$button&gt;
+&lt;/span&gt;
+&lt;/$vars&gt;
+\end
+
+\define tag-body(colour,palette,icon)
+&lt;$macrocall $name=&quot;tag-body-inner&quot; colour=&quot;&quot;&quot;$colour$&quot;&quot;&quot; fallbackTarget={{$palette$##tag-background}} colourA={{$palette$##foreground}} colourB={{$palette$##background}} icon=&quot;&quot;&quot;$icon$&quot;&quot;&quot;/&gt;
+\end
+
+&lt;div class=&quot;tc-edit-tags&quot;&gt;
+&lt;$fieldmangler&gt;
+&lt;$list filter=&quot;[all[current]tags[]sort[title]]&quot; storyview=&quot;pop&quot;&gt;
+&lt;$macrocall $name=&quot;tag-body&quot; colour={{!!color}} palette={{$:/palette}} icon={{!!icon}}/&gt;
+&lt;/$list&gt;
+&lt;$set name=&quot;tabIndex&quot; value={{$:/config/EditTabIndex}}&gt;
+&lt;$macrocall $name=&quot;tag-picker&quot;/&gt;
+&lt;/$set&gt;
+&lt;/$fieldmangler&gt;
+&lt;/div&gt;
+</pre>
+</div>
+<div created="20200807040442354" modified="20200807040442354" tags="" title="$:/core/ui/EditTemplate/type">
+<pre>\define lingo-base() $:/language/EditTemplate/
+\whitespace trim
+&lt;div class=&quot;tc-type-selector&quot;&gt;&lt;$fieldmangler&gt;
+&lt;em class=&quot;tc-edit&quot;&gt;&lt;&lt;lingo Type/Prompt&gt;&gt;&lt;/em&gt;&amp;nbsp;&amp;nbsp;&lt;$edit-text field=&quot;type&quot; tag=&quot;input&quot; default=&quot;&quot; placeholder={{$:/language/EditTemplate/Type/Placeholder}} focusPopup=&lt;&lt;qualify &quot;$:/state/popup/type-dropdown&quot;&gt;&gt; class=&quot;tc-edit-typeeditor tc-edit-texteditor tc-popup-handle&quot; tabindex={{$:/config/EditTabIndex}} focus={{{ [{$:/config/AutoFocus}match[type]then[true]] ~[[false]] }}}/&gt;&amp;nbsp;&lt;$button popup=&lt;&lt;qualify &quot;$:/state/popup/type-dropdown&quot;&gt;&gt; class=&quot;tc-btn-invisible tc-btn-dropdown&quot; tooltip={{$:/language/EditTemplate/Type/Dropdown/Hint}} aria-label={{$:/language/EditTemplate/Type/Dropdown/Caption}}&gt;{{$:/core/images/down-arrow}}&lt;/$button&gt;&amp;nbsp;&lt;$button message=&quot;tm-remove-field&quot; param=&quot;type&quot; class=&quot;tc-btn-invisible tc-btn-icon&quot; tooltip={{$:/language/EditTemplate/Type/Delete/Hint}} aria-label={{$:/language/EditTemplate/Type/Delete/Caption}}&gt;{{$:/core/images/delete-button}}&lt;/$button&gt;
+&lt;/$fieldmangler&gt;&lt;/div&gt;
+
+&lt;div class=&quot;tc-block-dropdown-wrapper&quot;&gt;
+&lt;$set name=&quot;tv-show-missing-links&quot; value=&quot;yes&quot;&gt;
+&lt;$reveal state=&lt;&lt;qualify &quot;$:/state/popup/type-dropdown&quot;&gt;&gt; type=&quot;nomatch&quot; text=&quot;&quot; default=&quot;&quot;&gt;
+&lt;div class=&quot;tc-block-dropdown tc-edit-type-dropdown&quot;&gt;
+&lt;$linkcatcher to=&quot;!!type&quot;&gt;
+&lt;$list filter='[all[shadows+tiddlers]prefix[$:/language/Docs/Types/]each[group]sort[group-sort]]'&gt;
+&lt;div class=&quot;tc-dropdown-item&quot;&gt;
+&lt;$text text={{!!group}}/&gt;
+&lt;/div&gt;
+&lt;$list filter=&quot;[all[shadows+tiddlers]prefix[$:/language/Docs/Types/]group{!!group}] +[sort[description]]&quot;&gt;&lt;$link to={{!!name}}&gt;&lt;$view field=&quot;description&quot;/&gt; (&lt;$view field=&quot;name&quot;/&gt;)&lt;/$link&gt;
+&lt;/$list&gt;
+&lt;/$list&gt;
+&lt;/$linkcatcher&gt;
+&lt;/div&gt;
+&lt;/$reveal&gt;
+&lt;/$set&gt;
+&lt;/div&gt;
+</pre>
+</div>
 <div caption="TiddlyWiki default tiddler title position" created="20200418121129515" modified="20200521151043861" tags="$:/giffmex/stroll $:/giffmex/titleview" title="$:/core/ui/ViewTemplate/title">
 <pre>\define title-styles()
 fill:$(foregroundColor)$;
@@ -11987,8 +12176,8 @@ exports.context = contextWidget;
 <div created="20200807005217361" modified="20200807005217361" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200807005210543" modified="20200807005210543" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200807005210543" modified="20200807005447872" title="$:/state/tab/sidebar--595412856">
+<pre>Contents</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
