--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@ Error message and password prompt
 
 <li>$:/config/RelinkOnRename</li>
 
+<li>$:/config/ShortcutInfo/delete-tiddler</li>
+
 <li>$:/config/Tiddlers/TitleLinks</li>
 
 <li>$:/config/ui/EditTemplate</li>
@@ -256,6 +258,12 @@ Error message and password prompt
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/dropdown/keyboardshortcut/advanced-search-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/list-number-286565879</li>
+
+<li>$:/state/new-shortcut/$:/config/shortcuts/advanced-search-286565879</li>
 
 <li>$:/state/sidebar</li>
 
@@ -852,6 +860,9 @@ exports.startup = function() {
 </div>
 <div bag="default" created="20200106214031452" modified="20200521150810088" revision="0" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
+</div>
+<div created="20200810022948387" modified="20200810023254499" tags="" title="$:/config/ShortcutInfo/delete-tiddler">
+<pre></pre>
 </div>
 <div bag="default" created="20200414150157768" modified="20200521145815908" revision="0" tags="$:/giffmex/stroll" title="$:/config/Tiddlers/TitleLinks" type="text/vnd.tiddlywiki">
 <pre>no</pre>
@@ -12049,6 +12060,15 @@ exports.context = contextWidget;
 <div created="20200806224240409" modified="20200806224241729" title="$:/SiteTitle">
 <pre>MyNotes</pre>
 </div>
+<div created="20200810023148705" modified="20200810023220615" title="$:/state/dropdown/keyboardshortcut/advanced-search-286565879">
+<pre>close</pre>
+</div>
+<div created="20200810022903467" modified="20200810022910898" title="$:/state/dropdown/keyboardshortcut/list-number-286565879">
+<pre>close</pre>
+</div>
+<div created="20200810023156810" modified="20200810023158245" title="$:/state/new-shortcut/$:/config/shortcuts/advanced-search-286565879">
+<pre>Escape</pre>
+</div>
 <div created="20200807042001188" modified="20200810021747470" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
@@ -12058,19 +12078,19 @@ exports.context = contextWidget;
 <div created="20200810022200092" modified="20200810022201801" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20200807135816594" modified="20200810022300121" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200807135816594" modified="20200810022810270" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/KeyboardShortcuts</pre>
 </div>
 <div created="20200809151324357" modified="20200809151324357" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200807135842558" modified="20200810022257238" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200807135842558" modified="20200810022511368" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810021930316" list="$:/ControlPanel [[Welcome to Stroll]]" modified="20200810022112717" title="$:/StoryList">
+<div created="20200810021930316" list="$:/ControlPanel $:/config/ShortcutInfo/delete-tiddler [[Welcome to Stroll]]" modified="20200810023212157" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
