Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Error message and password prompt
 
 <li>$:/config/RelinkOnRename</li>
 
-<li>$:/config/ShortcutInfo/delete-tiddler</li>
+<li>$:/config/shortcuts/delete-tiddler</li>
 
 <li>$:/config/Tiddlers/TitleLinks</li>
 
@@ -260,6 +260,8 @@ Error message and password prompt
 <li>$:/SiteTitle</li>
 
 <li>$:/state/dropdown/keyboardshortcut/advanced-search-286565879</li>
+
+<li>$:/state/dropdown/keyboardshortcut/delete-tiddler-286565879</li>
 
 <li>$:/state/dropdown/keyboardshortcut/list-number-286565879</li>
 
@@ -861,8 +863,8 @@ exports.startup = function() {
 <div bag="default" created="20200106214031452" modified="20200521150810088" revision="0" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
 </div>
-<div created="20200810022948387" modified="20200810023254499" tags="" title="$:/config/ShortcutInfo/delete-tiddler">
-<pre></pre>
+<div created="20200810023322122" modified="20200810023322122" title="$:/config/shortcuts/delete-tiddler">
+<pre>ctrl-shift-D</pre>
 </div>
 <div bag="default" created="20200414150157768" modified="20200521145815908" revision="0" tags="$:/giffmex/stroll" title="$:/config/Tiddlers/TitleLinks" type="text/vnd.tiddlywiki">
 <pre>no</pre>
@@ -12063,6 +12065,9 @@ exports.context = contextWidget;
 <div created="20200810023148705" modified="20200810023220615" title="$:/state/dropdown/keyboardshortcut/advanced-search-286565879">
 <pre>close</pre>
 </div>
+<div created="20200810023303050" modified="20200810023303050" title="$:/state/dropdown/keyboardshortcut/delete-tiddler-286565879">
+<pre>open</pre>
+</div>
 <div created="20200810022903467" modified="20200810022910898" title="$:/state/dropdown/keyboardshortcut/list-number-286565879">
 <pre>close</pre>
 </div>
@@ -12090,7 +12095,7 @@ exports.context = contextWidget;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810021930316" list="$:/ControlPanel $:/config/ShortcutInfo/delete-tiddler [[Welcome to Stroll]]" modified="20200810023212157" title="$:/StoryList">
+<div created="20200810021930316" list="[[Welcome to Stroll]]" modified="20200810023212157" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
