Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -393,8 +393,6 @@ Error message and password prompt
 
 <li>Stroll vs Roam</li>
 
-<li>Test notes</li>
-
 <li>Test tiddler</li>
 
 <li>The Lord of the Rings</li>
@@ -12095,7 +12093,7 @@ exports.context = contextWidget;
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200810021930316" list="[[Welcome to Stroll]]" modified="20200810023212157" title="$:/StoryList">
+<div created="20200810021930316" list="$:/ControlPanel [[Welcome to Stroll]]" modified="20200810023620571" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13090,26 +13088,6 @@ Each app has its strengths and drawbacks. Here is a general comparison:
 *Widgets, macros and other goodies built in
 *An extensive list of plugins (see the [[TiddlyWiki toolmap|https://dynalist.io/d/zUP-nIWu2FFoXH-oM7L7d9DM]])
 *Multiple options for viewing references</pre>
-</div>
-<div created="20200804083607754" modified="20200809150601877" tags="" title="Test notes" tmap.id="74b0294a-3814-4229-a6f0-728ed32e339e">
-<pre>!!Title 
----
-
-[[Buffalo SSD 2TB]]
-{{Buffalo SSD 2TB}}
-```
-This is some text
-This is a new line
-
-```
-
-As I add ''them''
-
-* this is the first item
-**this is the second item
-
-
-</pre>
 </div>
 <div created="20200807005114314" modified="20200807005127226" tags="Contents" title="Test tiddler">
 <pre></pre>
